# forthish

./: .gitignore  README.md  dune-project  forthish.opam
.github/workflows/: static.yml
_build/default/web/: index.css  index.html  main.js  main.map  main.ml  main.pp.ml
_build/default/web/.formatted/: dune  main.ml
_build/default/web/.main.eobjs/: dune_site__Dune_site_data.ml-gen
_build/default/web/.main.eobjs/byte/: dune__exe__Main.cmo  dune__exe__Main.cmt  dune__exe__Main.cmti  dune_site__Dune_site_data.cmo  dune_site__Dune_site_data.cmt
_build/default/web/.merlin-conf/: exe-main
lib/: dune  evaluator.ml  interpretor.ml  parser.ml  tokenizer.ml
lib/std/: list.fthish  seq.fthish  util.fthish
std/: .ocamline_history.txt  list.4ish  seq.4ish  util.4ish
test/: dune
web/: dune  main.ml
