(executables
 (names main)
 (libraries forthish)
 (modes byte)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (targets main.js)
 (action
  (run %{bin:js_of_ocaml} --source-map %{dep:main.bc} -o %{targets} --pretty)))

(alias
 (name default)
 (deps main.js index.html index.css std/list.4ish std/util.4ish))
